--- a/statewalker/pom.xml
+++ b/statewalker/pom.xml
@@ -3,7 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.fontys.sebivenlo</groupId>
     <artifactId>statewalker</artifactId>
-    <version>2.1-SNAPSHOT</version>
+    <version>2.1</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+    <name>SEBIVenlo :: Statewalker</name>
     <packaging>jar</packaging>
     <url>https://www.fontysvenlo.org/repository</url>
     <distributionManagement>
@@ -83,17 +89,5 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>
-            <groupId>org.easytesting</groupId>
-            <artifactId>fest-assert-core</artifactId>
-            <version>2.0M10</version>
-            <scope>test</scope>
-        </dependency>-->
     </dependencies>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
-    <name>SEBIVenlo :: Statewalker</name>
 </project>
