--- a/statewalkertest/pom.xml
+++ b/statewalkertest/pom.xml
@@ -3,9 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.fontys.sebivenlo</groupId>
     <artifactId>statewalkertest</artifactId>
-    <version>2.1-SNAPSHOT</version>
+    <version>2.1</version>
     <packaging>jar</packaging>
     <name>SEBIVenlo :: StatewalkerTest</name>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <url>https://www.fontysvenlo.org/repository</url>
     <distributionManagement>
         <repository>
@@ -43,7 +48,6 @@
         
         </plugins>
         <extensions>
-            <!-- Enabling the use of SSH -->
             <extension>
                 <groupId>org.apache.maven.wagon</groupId>
                 <artifactId>wagon-ssh-external</artifactId>
@@ -68,7 +72,7 @@
         <dependency>
             <groupId>nl.fontys.sebivenlo</groupId>
             <artifactId>statewalker</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1</version>
         </dependency>
     </dependencies>
     <reporting>
@@ -82,9 +86,4 @@
             </plugin>
         </plugins>
     </reporting>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
 </project>
