--- a/statewalker/pom.xml
+++ b/statewalker/pom.xml
@@ -15,10 +15,13 @@
     <distributionManagement>
         <repository>
             <id>fontysvenlo.org</id>
-            <url>scpexe://fontysvenlo.org/home/repository</url>
+            <url>scpexe://fontysvenlo.org/home/repository</url> 
         </repository>
+        <site>
+            <id>prj32.fontysvenlo.org</id>
+            <url>scpexe://fontysvenlo.org/home/javabits/public_html/statewalker</url>
+        </site>
     </distributionManagement>
-
     <build>
         <plugins>
             <plugin>
@@ -45,7 +48,45 @@
                     </execution>
                 </executions>
             </plugin>
-        
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.4</version>
+                <configuration>
+                    <additionalparam>-Xdoclint:none</additionalparam>
+                    <additionalparam>--allow-script-in-comments</additionalparam>
+                    <!-- (1) CSS file location -->
+                    <!--                    <stylesheetfile>../src/main/javadoc/syntax-highlighter.css</stylesheetfile>-->
+ 
+                    <!-- (2) SyntaxHighlighter Javascript files -->
+                    <top><![CDATA[
+      <script src="https://www.fontysvenlo.org/syntaxhighlighter/scripts/shCore.js" type="text/javascript"></script>
+      <script src="https://www.fontysvenlo.org/syntaxhighlighter/scripts/shBrushJava.js" type="text/javascript"></script>
+    ]]></top>
+ 
+                    <!--
+                    (3) SyntaxHighlighter configuration and initialization
+                    See: http://alexgorbatchev.com/SyntaxHighlighter/manual/configuration/
+                    -->
+                    <footer><![CDATA[
+      <script type="text/javascript">
+        SyntaxHighlighter.defaults["auto-links"] = false;
+        SyntaxHighlighter.defaults["tab-size"] = 2;
+        SyntaxHighlighter.all();
+      </script>
+    ]]></footer>
+ 
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>javadoc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
         <extensions>
             <!-- Enabling the use of SSH -->
@@ -59,14 +100,25 @@
     <reporting>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+                    <links>
+                        <link>https://docs.oracle.com/javase/8/docs/api/</link>
+                    </links> 
+                    <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.4</version>
+                <version>3.0.5</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.7</version>
+                <version>3.8</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
