api docs statically link on fontysvenlo.org maven site

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -4,5 +4,5 @@ include Makefile.macros
 # Die hebben dan ook een Makefile nodig. Zie als voorbeeld de Makefile onder restricted.
 all: index.html
 
-index2017.html: index2017.adoc css/asciidoctor.css 
-	asciidoctor -n -a linkcss -a stylesdir=css -a stylesheet=asciidoctor.css index.adoc
+index.html: README.adoc css/asciidoctor.css 
+	asciidoctor -n -a linkcss -a stylesdir=css -a stylesheet=asciidoctor.css README.adoc -o index.html
