--- a/statewalker/pom.xml
+++ b/statewalker/pom.xml
@@ -48,45 +48,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
-                <configuration>
-                    <additionalparam>-Xdoclint:none</additionalparam>
-                    <additionalparam>--allow-script-in-comments</additionalparam>
-                    <!-- (1) CSS file location -->
-                    <!--                    <stylesheetfile>../src/main/javadoc/syntax-highlighter.css</stylesheetfile>-->
- 
-                    <!-- (2) SyntaxHighlighter Javascript files -->
-                    <top><![CDATA[
-      <script src="https://www.fontysvenlo.org/syntaxhighlighter/scripts/shCore.js" type="text/javascript"></script>
-      <script src="https://www.fontysvenlo.org/syntaxhighlighter/scripts/shBrushJava.js" type="text/javascript"></script>
-    ]]></top>
- 
-                    <!--
-                    (3) SyntaxHighlighter configuration and initialization
-                    See: http://alexgorbatchev.com/SyntaxHighlighter/manual/configuration/
-                    -->
-                    <footer><![CDATA[
-      <script type="text/javascript">
-        SyntaxHighlighter.defaults["auto-links"] = false;
-        SyntaxHighlighter.defaults["tab-size"] = 2;
-        SyntaxHighlighter.all();
-      </script>
-    ]]></footer>
- 
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>javadoc</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
         </plugins>
         <extensions>
             <!-- Enabling the use of SSH -->
@@ -142,4 +103,83 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <profiles>
+        <profile>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.10.4</version>
+                        <configuration>
+                            <additionalparam>-Xdoclint:none</additionalparam>
+                            <additionalparam>--allow-script-in-comments</additionalparam>
+                            <resourcesArtifacts>
+                                <resourceArtifact>
+                                    <groupId>nl.fontys.sebivenlo</groupId>
+                                    <artifactId>javadochighlighter</artifactId>
+                                    <version>1.0</version>
+                                </resourceArtifact>
+                            </resourcesArtifacts>
+                            <!-- Add SyntaxHighlighter feature.
+                            This gets added to the top of every Javadoc html file -->
+                            <top><![CDATA[
+                            <script src="{@docRoot}/syntaxhighlighter/syntaxhighlighter.js" type="text/javascript"></script>
+                            <link href="{@docRoot}/syntaxhighlighter/theme.css" rel="stylesheet" type="text/css" title="Style">
+                            ]]>
+                            </top>                            
+                            <!-- Activate and customize SyntaxHighlighter feature 
+                            This gets added to the bottom of every Javadoc html file -->
+                            <footer><![CDATA[
+                            <script type="text/javascript">
+                               SyntaxHighlighter.defaults["auto-links"] = false;
+                               SyntaxHighlighter.defaults["tab-size"] = 2;
+                               SyntaxHighlighter.all();
+                            </script>
+                        ]]></footer>                            
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+            <reporting> 
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.10.4</version>
+                        <configuration>
+                            <additionalparam>-Xdoclint:none</additionalparam>
+                            <additionalparam>--allow-script-in-comments</additionalparam>
+                            <resourcesArtifacts>
+                                <resourceArtifact>
+                                    <groupId>nl.fontys.sebivenlo</groupId>
+                                    <artifactId>javadochighlighter</artifactId>
+                                    <version>1.0</version>
+                                </resourceArtifact>
+                            </resourcesArtifacts>
+                            <!-- Add SyntaxHighlighter feature.
+                            This gets added to the top of every Javadoc html file -->
+                            <top><![CDATA[
+                            <script src="{@docRoot}/syntaxhighlighter/syntaxhighlighter.js" type="text/javascript"></script>
+                            <link href="{@docRoot}/syntaxhighlighter/theme.css" rel="stylesheet" type="text/css" title="Style">
+                            ]]>
+                            </top>                            
+                            <!-- Activate and customize SyntaxHighlighter feature 
+                            This gets added to the bottom of every Javadoc html file -->
+                            <footer><![CDATA[
+                            <script type="text/javascript">
+                               SyntaxHighlighter.defaults["auto-links"] = false;
+                               SyntaxHighlighter.defaults["tab-size"] = 2;
+                               SyntaxHighlighter.all();
+                            </script>
+                        ]]></footer>                            
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </reporting>
+        </profile>
+    </profiles>
 </project>
