--- a/statewalker/pom.xml
+++ b/statewalker/pom.xml
@@ -1,185 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>nl.fontys.sebivenlo</groupId>
+        <artifactId>statewalkerparent</artifactId>
+        <version>1.1</version>
+        <relativePath>..</relativePath>
+    </parent>
     <groupId>nl.fontys.sebivenlo</groupId>
     <artifactId>statewalker</artifactId>
-    <version>2.1</version>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
-    <name>SEBIVenlo :: Statewalker</name>
+    <version>2.2</version>
     <packaging>jar</packaging>
-    <url>https://www.fontysvenlo.org/repository</url>
-    <distributionManagement>
-        <repository>
-            <id>fontysvenlo.org</id>
-            <url>scpexe://fontysvenlo.org/home/repository</url> 
-        </repository>
-        <site>
-            <id>prj32.fontysvenlo.org</id>
-            <url>scpexe://fontysvenlo.org/home/javabits/public_html/statewalker</url>
-        </site>
-    </distributionManagement>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.9</version>
-                <configuration>
-                    <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
-                    <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>jacoco-initialize</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>jacoco-site</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-        <extensions>
-            <!-- Enabling the use of SSH -->
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-ssh-external</artifactId>
-                <version>2.12</version>
-            </extension>
-        </extensions>
-    </build>
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.0.0-M1</version>
-                <configuration>
-                    <links>
-                        <link>https://docs.oracle.com/javase/8/docs/api/</link>
-                    </links> 
-                    <additionalparam>-Xdoclint:none</additionalparam>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.5</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.8</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.5</version>
-            </plugin>
-        </plugins>
-    </reporting>
-
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-core</artifactId>
-            <version>1.3</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-    <profiles>
-        <profile>
-            <activation>
-                <jdk>1.8</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.4</version>
-                        <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
-                            <additionalparam>--allow-script-in-comments</additionalparam>
-                            <resourcesArtifacts>
-                                <resourceArtifact>
-                                    <groupId>nl.fontys.sebivenlo</groupId>
-                                    <artifactId>javadochighlighter</artifactId>
-                                    <version>1.0</version>
-                                </resourceArtifact>
-                            </resourcesArtifacts>
-                            <!-- Add SyntaxHighlighter feature.
-                            This gets added to the top of every Javadoc html file -->
-                            <top><![CDATA[
-                            <script src="{@docRoot}/syntaxhighlighter/syntaxhighlighter.js" type="text/javascript"></script>
-                            <link href="{@docRoot}/syntaxhighlighter/theme.css" rel="stylesheet" type="text/css" title="Style">
-                            ]]>
-                            </top>                            
-                            <!-- Activate and customize SyntaxHighlighter feature 
-                            This gets added to the bottom of every Javadoc html file -->
-                            <footer><![CDATA[
-                            <script type="text/javascript">
-                               SyntaxHighlighter.defaults["auto-links"] = false;
-                               SyntaxHighlighter.defaults["tab-size"] = 2;
-                               SyntaxHighlighter.all();
-                            </script>
-                        ]]></footer>                            
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-            <reporting> 
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.4</version>
-                        <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
-                            <additionalparam>--allow-script-in-comments</additionalparam>
-                            <resourcesArtifacts>
-                                <resourceArtifact>
-                                    <groupId>nl.fontys.sebivenlo</groupId>
-                                    <artifactId>javadochighlighter</artifactId>
-                                    <version>1.0</version>
-                                </resourceArtifact>
-                            </resourcesArtifacts>
-                            <!-- Add SyntaxHighlighter feature.
-                            This gets added to the top of every Javadoc html file -->
-                            <top><![CDATA[
-                            <script src="{@docRoot}/syntaxhighlighter/syntaxhighlighter.js" type="text/javascript"></script>
-                            <link href="{@docRoot}/syntaxhighlighter/theme.css" rel="stylesheet" type="text/css" title="Style">
-                            ]]>
-                            </top>                            
-                            <!-- Activate and customize SyntaxHighlighter feature 
-                            This gets added to the bottom of every Javadoc html file -->
-                            <footer><![CDATA[
-                            <script type="text/javascript">
-                               SyntaxHighlighter.defaults["auto-links"] = false;
-                               SyntaxHighlighter.defaults["tab-size"] = 2;
-                               SyntaxHighlighter.all();
-                            </script>
-                        ]]></footer>                            
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </reporting>
-        </profile>
-    </profiles>
+    <name>SEBIVenlo :: Statewalker</name>
 </project>
