--- a/statewalkertest/pom.xml
+++ b/statewalkertest/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>nl.fontys.sebivenlo</groupId>
             <artifactId>statewalker</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.2</version>
         </dependency>
     </dependencies>
 </project>
