--- a/statewalkertest/pom.xml
+++ b/statewalkertest/pom.xml
@@ -13,7 +13,9 @@
     <artifactId>statewalkertest</artifactId>
     <version>2.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    
+    <properties>
+        <pitTargetClasses>nl.fontys.sebivenlo.**</pitTargetClasses>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>nl.fontys.sebivenlo</groupId>
