added extra methods (and test) to avoid var args array creation for 5 or less  new states

--- a/statewalkertest/pom.xml
+++ b/statewalkertest/pom.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <url>https://javabits.fontysvenlo.org/statewalkertest</url>
     <parent>
         <groupId>nl.fontys.sebivenlo</groupId>
         <artifactId>statewalkerparent</artifactId>
         <version>1.1</version>
-       <relativePath>..</relativePath>
+        <relativePath>..</relativePath>
     </parent>
 
     <name>SEBIVenlo :: StatewalkerTest</name>
     <groupId>nl.fontys.sebivenlo</groupId>
     <artifactId>statewalkertest</artifactId>
-    <version>2.1-SNAPSHOT</version>
+    <version>3.0</version>
     <packaging>jar</packaging>
     <properties>
         <pitTargetClasses>nl.fontys.sebivenlo.**</pitTargetClasses>
@@ -23,4 +24,16 @@
             <version>3.0</version>
         </dependency>
     </dependencies>
+<!--    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <detectLinks/>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>-->
 </project>
