--- a/sebipom/pom.xml
+++ b/sebipom/pom.xml
@@ -224,13 +224,35 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>3.0.0</version>
                 <configuration>
-                    <links>
-                        <link>https://docs.oracle.com/javase/8/docs/api/</link>
-                    </links> 
-                    <additionalparam>-Xdoclint:none</additionalparam>
+                    <additionalParam>-Xdoclint:none</additionalParam>
+                    <additionalOptions>--allow-script-in-comments</additionalOptions>
+                    <resourcesArtifacts>
+                        <resourceArtifact>
+                            <groupId>nl.fontys.sebivenlo</groupId>
+                            <artifactId>javadochighlighter</artifactId>
+                            <version>1.0</version>
+                        </resourceArtifact>
+                    </resourcesArtifacts>
+                    <!-- Add SyntaxHighlighter feature.
+                    This gets added to the top of every Javadoc html file -->
+                    <top><![CDATA[
+                            <script src="{@docRoot}/syntaxhighlighter/syntaxhighlighter.js" type="text/javascript"></script>
+                            <link href="{@docRoot}/syntaxhighlighter/theme.css" rel="stylesheet" type="text/css" title="Style">
+                            ]]>
+                    </top>                            
+                    <!-- Activate and customize SyntaxHighlighter feature 
+                    This gets added to the bottom of every Javadoc html file -->
+                    <footer><![CDATA[
+                            <script type="text/javascript">
+                               SyntaxHighlighter.defaults["auto-links"] = false;
+                               SyntaxHighlighter.defaults["tab-size"] = 2;
+                               SyntaxHighlighter.all();
+                            </script>
+                        ]]></footer>                            
                 </configuration>
+                        
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -245,7 +267,7 @@
                     <linkXref>true</linkXref>
                     <sourceEncoding>utf-8</sourceEncoding>
                     <minimumTokens>100</minimumTokens>
-                    <targetJdk>1.5</targetJdk>
+                    <targetJdk>1.8</targetJdk>
                     <excludes>
                         <exclude>**/generated/*.java</exclude>
                     </excludes>
@@ -275,76 +297,10 @@
             <activation>
                 <jdk>1.8</jdk>
             </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.4</version>
-                        <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
-                            <additionalparam>--allow-script-in-comments</additionalparam>
-                            <resourcesArtifacts>
-                                <resourceArtifact>
-                                    <groupId>nl.fontys.sebivenlo</groupId>
-                                    <artifactId>javadochighlighter</artifactId>
-                                    <version>1.0</version>
-                                </resourceArtifact>
-                            </resourcesArtifacts>
-                            <!-- Add SyntaxHighlighter feature.
-                            This gets added to the top of every Javadoc html file -->
-                            <top><![CDATA[
-                            <script src="{@docRoot}/syntaxhighlighter/syntaxhighlighter.js" type="text/javascript"></script>
-                            <link href="{@docRoot}/syntaxhighlighter/theme.css" rel="stylesheet" type="text/css" title="Style">
-                            ]]>
-                            </top>                            
-                            <!-- Activate and customize SyntaxHighlighter feature 
-                            This gets added to the bottom of every Javadoc html file -->
-                            <footer><![CDATA[
-                            <script type="text/javascript">
-                               SyntaxHighlighter.defaults["auto-links"] = false;
-                               SyntaxHighlighter.defaults["tab-size"] = 2;
-                               SyntaxHighlighter.all();
-                            </script>
-                        ]]></footer>                            
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+            
             <reporting> 
                 <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.10.4</version>
-                        <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
-                            <additionalparam>--allow-script-in-comments</additionalparam>
-                            <resourcesArtifacts>
-                                <resourceArtifact>
-                                    <groupId>nl.fontys.sebivenlo</groupId>
-                                    <artifactId>javadochighlighter</artifactId>
-                                    <version>1.0</version>
-                                </resourceArtifact>
-                            </resourcesArtifacts>
-                            <!-- Add SyntaxHighlighter feature.
-                            This gets added to the top of every Javadoc html file -->
-                            <top><![CDATA[
-                            <script src="{@docRoot}/syntaxhighlighter/syntaxhighlighter.js" type="text/javascript"></script>
-                            <link href="{@docRoot}/syntaxhighlighter/theme.css" rel="stylesheet" type="text/css" title="Style">
-                            ]]>
-                            </top>                            
-                            <!-- Activate and customize SyntaxHighlighter feature 
-                            This gets added to the bottom of every Javadoc html file -->
-                            <footer><![CDATA[
-                            <script type="text/javascript">
-                               SyntaxHighlighter.defaults["auto-links"] = false;
-                               SyntaxHighlighter.defaults["tab-size"] = 2;
-                               SyntaxHighlighter.all();
-                            </script>
-                        ]]></footer>                            
-                        </configuration>
-                    </plugin>
+                   
                 </plugins>
             </reporting>
         </profile>
