added github userid

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <description>Fontys Venlo Elevator project artifacts. "Up with your competencies"</description>
     <developers>
         <developer>
-            <id>hom</id>
+            <id>homberghp</id>
             <email>p.vandenhombergh@fontys.nl</email>
             <name>Pieter van den Hombergh</name>
             <organization>Fontys Hogeschool voor Techniek en Logistiek, Opleidingen Software Engineering en Business Informatica</organization>
