--- a/sebipom/pom.xml
+++ b/sebipom/pom.xml
@@ -459,6 +459,9 @@
                         <directory>src/main/java</directory>
                         <includes>
                             <include>**/*.fxml</include>
+                            <include>**/*.png</include>
+                            <include>**/*.svg</include>
+                            <include>**/*.jpg</include>
                             <include>**/*.css</include>
                             <include>**/*.properties</include>
                         </includes>
@@ -467,6 +470,9 @@
                         <directory>src/main/resources</directory>
                         <includes>
                             <include>**/*.xml</include>
+                            <include>**/*.png</include>
+                            <include>**/*.svg</include>
+                            <include>**/*.jpg</include>
                             <include>**/*.css</include>
                             <include>**/*.properties</include>
                         </includes>
